WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138266
Pseudo classes with an escaped parenthesis generate invalid rules
https://bugs.webkit.org/show_bug.cgi?id=138266
Summary
Pseudo classes with an escaped parenthesis generate invalid rules
Benjamin Poulain
Reported
2014-10-31 15:38:32 PDT
Pseudo classes with an escaped parenthesis generate invalid rules
Attachments
Patch
(45.48 KB, patch)
2014-10-31 15:46 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-10-31 15:46:42 PDT
Created
attachment 240765
[details]
Patch
Benjamin Poulain
Comment 2
2014-10-31 16:09:56 PDT
Comment on
attachment 240765
[details]
Patch Clearing flags on attachment: 240765 Committed
r175432
: <
http://trac.webkit.org/changeset/175432
>
Benjamin Poulain
Comment 3
2014-10-31 16:09:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug